//// -- DBML for Anime Tracking App -- ////



// Table for user profile and authentication information.

Table users {

// Using UUID as a primary key is great for security and scalability.

id uuid [pk, default: `gen_random_uuid()`]

// Unique constraint to prevent duplicate usernames.

username varchar(255) [not null, unique]

// Unique constraint for email, which is critical for password resets.

email varchar(255) [not null, unique]

// This will store the securely hashed password (e.g., using bcrypt).

password_hash varchar(255) [not null]

// URL for a user's avatar. Can be NULL if they don't set one.

avatar_url varchar(255)

// A short biography for the user's public profile.

bio text

// Timestamps with time zone are crucial for a global user base.

created_at timestamp [not null, default: `now()`]

updated_at timestamp [not null, default: `now()`]

}



// This table serves as a local cache for all anime data fetched from the Jikan API.

Table anime {

// The primary key is the MyAnimeList ID, which simplifies syncing with the Jikan API.

id int [pk]

// The main title of the anime.

title varchar(255) [not null]

// A detailed plot summary.

synopsis text

// URL for the cover art.

cover_image_url varchar(255)

// Total episodes. Can be NULL for shows that are still airing.

total_episodes int

// Airing status like 'Finished Airing', 'Currently Airing'.

status varchar(50)

// The initial air date of the anime.

release_date date

// Age rating, e.g., 'PG-13'.

rating varchar(50)

// The public score from MyAnimeList.

score decimal(4, 2)

// Using JSONB is highly efficient for storing and querying semi-structured data.

genres jsonb

// Storing studio names in a JSONB array.

studios jsonb

// Broadcast information for currently airing shows.

broadcast_information varchar(255)

// A timestamp to track when we last synced this record with the Jikan API.

jikan_last_synced_at timestamp [not null, default: `now()`]

}



// Custom ENUM type for the user's tracking status.

Enum user_anime_status {

Watching

Completed

Dropped

"Watch later"

}



// This is the core "join" table that tracks each user's relationship with each anime.

Table user_anime_list {

id uuid [pk, default: `gen_random_uuid()`]

// Foreign key linking to the users table.

user_id uuid [not null]

// Foreign key linking to the anime table.

anime_id int [not null]

// The user's progress status, using our custom ENUM type.

status user_anime_status [not null]

// The number of episodes the user has watched.

current_episode int [not null, default: 0, note: 'CHECK (current_episode >= 0)']

// The user's personal score, constrained to a 1-10 scale.

score int [note: 'CHECK (score >= 1 AND score <= 10)']


// Date the user started watching the anime.

started_watching_date date

// Date the user finished the anime.

finished_watching_date date

created_at timestamp [not null, default: `now()`]

updated_at timestamp [not null, default: `now()`]



Indexes {

// This prevents a user from adding the same anime to their list more than once.

(user_id, anime_id) [unique]

}

}



// Define foreign key relationships for the diagram.

// The '>' symbol indicates a one-to-many relationship.



// A user can have many entries in their anime list.

// ON DELETE CASCADE: if a user is deleted, all their list entries are also deleted.

Ref: users.id < user_anime_list.user_id [delete: cascade]



// An anime can be on many users' lists.

// ON DELETE CASCADE: if an anime is removed, its corresponding list entries are also removed.

Ref: anime.id < user_anime_list.anime_id [delete: cascade]

// Table for user reviews on anime.
Table reviews {
  id uuid [pk, default: `gen_random_uuid()`]
  // Foreign key linking to the users table.
  user_id uuid [not null]
  // Foreign key linking to the anime table.
  anime_id int [not null]
  // The user's star rating, constrained to a 1-5 scale.
  rating int [not null, note: 'CHECK (rating >= 1 AND rating <= 5)']
  // The user's review comment.
  comment text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Indexes {
    // This prevents a user from reviewing the same anime more than once.
    (user_id, anime_id) [unique]
  }
}

// A user can write many reviews.
// ON DELETE CASCADE: if a user is deleted, all their reviews are also deleted.
Ref: users.id < reviews.user_id [delete: cascade]

// An anime can have many reviews.
// ON DELETE CASCADE: if an anime is removed, its corresponding reviews are also removed.
Ref: anime.id < reviews.anime_id [delete: cascade]
